reorganize router codes

--- a/views/ejs/editor-post.ejs
+++ b/views/ejs/editor-post.ejs
@@ -162,6 +162,11 @@
                                 onclick="textEditorUploadPhoto(this, '#photouploader')">
                                 <img src="/static/icons/add_photo_alternate-24px.svg">
                             </button>
+                            <button type="button" class="btn text-white bg-gunjou-7" id="photoUploadBtn"
+                                style="border-top-right-radius: 0;"
+                                onclick="textEditorUploadPhoto(this, '#photouploader')">
+                                <img src="/static/icons/add_photo_alternate-24px.svg">
+                            </button>
 
 
                         </div>
