--- a/views/ejs/common/header-navi.ejs
+++ b/views/ejs/common/header-navi.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             <h2 class="no-border no-margin no-padding letter-space-neg10 font-weight-500">
-                postenuous.
+                postenuous
             </h2>
         </div>
     </div>
